--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClInclude Include="ToggleEmphModeCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SizeSelection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp">
