--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DiscBaseKnotCmd.h">
+    <ClInclude Include="DeleteBaseKnotCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Connect2PipeCommand.h">
@@ -66,9 +66,6 @@
     <ClInclude Include="AddNobsCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AppendNeuronCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="InsertBaseKnotCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -111,7 +108,7 @@
     <ClInclude Include="MoveSelectionCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="NewNeuronCommandT.h">
+    <ClInclude Include="NewIoNeuronPairCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SplitNeuronCmd.h">
