--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="InputConnector.h" />
     <ClInclude Include="IoNeuron.h" />
     <ClInclude Include="IoConnector.h" />
+    <ClInclude Include="IoNeuronPair.h" />
     <ClInclude Include="MicroMeterPntVector.h" />
     <ClInclude Include="DescriptionUI.h" />
     <ClInclude Include="DrawContext.h" />
