Performance monitoring mode

--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -58,6 +58,7 @@
     <ClInclude Include="XArray.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BasicTypes.cpp" />
     <ClCompile Include="BoolOp.cpp" />
     <ClCompile Include="MoreTypes.cpp" />
     <ClCompile Include="SmoothMove.cpp" />
