--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -214,6 +214,7 @@
     <ClInclude Include="NobIdList.h" />
     <ClInclude Include="PipeList.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SigGenData.h" />
     <ClInclude Include="SignalFactory.h" />
     <ClInclude Include="Signal.h" />
     <ClInclude Include="Nob.h" />
