--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -215,6 +215,7 @@
     <ClInclude Include="PipeList.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SigGenData.h" />
+    <ClInclude Include="SigGenId.h" />
     <ClInclude Include="SignalFactory.h" />
     <ClInclude Include="Signal.h" />
     <ClInclude Include="Nob.h" />
@@ -222,6 +223,7 @@
     <ClInclude Include="SignalGenerator.h" />
     <ClInclude Include="SignalId.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Stimulus.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="tHighlightType.h" />
     <ClInclude Include="ParameterType.h" />
@@ -229,6 +231,7 @@
     <ClInclude Include="Track.h" />
     <ClInclude Include="TrackNr.h" />
     <ClInclude Include="UPNobList.h" />
+    <ClInclude Include="UPSigGenList.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Analyzer.cpp" />
