--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_CONS_WINDOW 4119 267 922 517
-ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -703 1081 705 330
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -296 1677 301 201
-ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW -1926 1080 1236 1048
+MoveWindow IDM_APPL_WINDOW -1912 1086 1614 1022
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -705 1817 425 307
-ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -703 1401 421 426
+MoveWindow IDM_CRSR_WINDOW -303 1385 301 226
+ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW -303 1080 301 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1918 1132 1220 966
+MoveWindow IDM_MAIN_WINDOW -1904 1138 1598 940
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -300 1401 316 283
+MoveWindow IDM_DESC_WINDOW -358 1120 301 301
+ShowWindow IDM_DESC_WINDOW SW_HIDE
+MoveWindow IDM_MONITOR_WINDOW 200 0 136 201
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_PARAM_WINDOW -313 1607 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -295 1871 301 251
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_PERF_WINDOW -321 1825 301 281
+ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_SIG_DESIGNER -876 1285 501 441
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
