--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClInclude Include="win32_controls.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="win32_oneLineDialog.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32_baseWindow.cpp">
