--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -97,7 +97,7 @@
     <ClInclude Include="RotateSelectionCommand.h" />
     <ClInclude Include="RotationCommand.h" />
     <ClInclude Include="SelSigGenClientsCmd.h" />
-    <ClInclude Include="SetSigGenCmd.h" />
+    <ClInclude Include="SetActiveSigGenCmd.h" />
     <ClInclude Include="SetSigGenDataCmd.h" />
     <ClInclude Include="SetHighlightedSignalCmd.h" />
     <ClInclude Include="SingleNobAnimation.h" />
