--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -201,6 +201,12 @@
     <ClInclude Include="SelSigGenClientsCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SigGenCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AttachSigGenCmd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp">
