--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -8,11 +8,11 @@ MoveWindow IDM_MAIN_WINDOW -1904 1138 1598 940
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DESC_WINDOW -358 1120 301 301
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW 200 0 136 201
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_MONITOR_WINDOW -1817 1170 618 201
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PARAM_WINDOW -313 1607 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_SIG_DESIGNER -971 1202 598 775
+MoveWindow IDM_SIG_DESIGNER -1095 1192 598 775
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
