--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -74,6 +74,7 @@
     <ClInclude Include="AnalyzeCommand.h" />
     <ClInclude Include="ArrowAnimation.h" />
     <ClInclude Include="AttachSIgGen2ConnCmd.h" />
+    <ClInclude Include="AttachSigGen2SelCmd.h" />
     <ClInclude Include="ClearBeepersCommand.h" />
     <ClInclude Include="CommandFunctions.h" />
     <ClInclude Include="CommandStack.h" />
@@ -100,7 +101,7 @@
     <ClInclude Include="SelSigGenClientsCmd.h" />
     <ClInclude Include="SetActiveSigGenCmd.h" />
     <ClInclude Include="AttachSigGen2LineCmd.h" />
-    <ClInclude Include="SetSigGenDataCmd.h" />
+    <ClInclude Include="SetSigGenStaticDataCmd.h" />
     <ClInclude Include="SetHighlightedSignalCmd.h" />
     <ClInclude Include="SigGenCommand.h" />
     <ClInclude Include="SingleNobAnimation.h" />
