Stimulus button in signal designer

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -15,4 +15,4 @@ ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -321 1825 301 281
 ShowWindow IDM_PERF_WINDOW SW_HIDE
 MoveWindow IDM_SIG_DESIGNER -1406 1219 942 567
-ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_SIG_DESIGNER SW_HIDE
